--- a/FrontEndopdracht02.html
+++ b/FrontEndopdracht02.html
@@ -94,6 +94,16 @@
     <h1 id="heading4"></h1>
     <h1 id="heading5"></h1>
 
+    <nav>
+        <li><a href="heading1"></a></li>
+        <li><a href="heading2"></a></li>
+        <li><a href="heading3"></a></li>
+        <li><a href="heading4"></a></li>
+        <li><a href="heading5"></a></li>
+    </nav>
+
+    pre Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga repellendus, sunt quae facilis ratione blanditiis quod porro aperiam, officia dicta quia sapiente est soluta assumenda eveniet laboriosam molestiae provident incidunt?
+
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ad deserunt incidunt aliquam omnis, eligendi
         inventore eveniet, unde officia veritatis laboriosam reiciendis, sit eius error facilis nisi est quos possimus.
