--- a/FrontEndopdracht02.html
+++ b/FrontEndopdracht02.html
@@ -95,11 +95,11 @@
     <h1 id="heading5"></h1>
 
     <nav>
-        <li><a href="heading1"></a></li>
-        <li><a href="heading2"></a></li>
-        <li><a href="heading3"></a></li>
-        <li><a href="heading4"></a></li>
-        <li><a href="heading5"></a></li>
+        <li><a href="heading1">heading1</a></li>
+        <li><a href="heading2">heading2</a></li>
+        <li><a href="heading3">heading3</a></li>
+        <li><a href="heading4">heading4</a></li>
+        <li><a href="heading5">heading5</a></li>
     </nav>
 
     pre Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga repellendus, sunt quae facilis ratione blanditiis quod porro aperiam, officia dicta quia sapiente est soluta assumenda eveniet laboriosam molestiae provident incidunt?
